[metadata]
name = blackjack_game
description = Blackjack Game
author = Jeffrey Zhao
author_email = jeffreyzhao2003@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.8

[options]
packages = 
    blackjack_game
python_requires = >= 3.8
package_dir = 
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest >=7.0.0
    pytext-cv >=3.0.0
    mypy >= 1.8.0

[options.package_data]
blackjack_game = py.typed